sample/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, EQ=3, DIF=4, INF=5, INFEQ=6, SUP=7, SUPEQ=8, TRUE=9, FALSE=10, 
		COLON=11, SETUP=12, LOOP=13, LINE=14, WHEN=15, IF=16, IS=17, ELSE=18, 
		ON=19, OFF=20, INPUT=21, OUTPUT=22, ID=23, INT=24, DEC=25, WS=26;
	public static final int
		RULE_r = 0, RULE_setup = 1, RULE_loop = 2, RULE_set = 3, RULE_sets = 4, 
		RULE_actions = 5, RULE_action = 6, RULE_affect = 7, RULE_event = 8, RULE_cond = 9, 
		RULE_second = 10, RULE_expr = 11, RULE_status = 12, RULE_exp = 13, RULE_operator = 14, 
		RULE_defs = 15, RULE_def = 16;
	public static final String[] ruleNames = {
		"r", "setup", "loop", "set", "sets", "actions", "action", "affect", "event", 
		"cond", "second", "expr", "status", "exp", "operator", "defs", "def"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'true'", 
		"'false'", "':'", "'setup:'", "'loop:'", "'\n'", "'when '", "'if'", "'is'", 
		"'else'", "'ON'", "'OFF'", "'INPUT'", "'OUTPUT'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "EQ", "DIF", "INF", "INFEQ", "SUP", "SUPEQ", "TRUE", 
		"FALSE", "COLON", "SETUP", "LOOP", "LINE", "WHEN", "IF", "IS", "ELSE", 
		"ON", "OFF", "INPUT", "OUTPUT", "ID", "INT", "DEC", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public DefsContext d;
		public SetupContext s;
		public LoopContext l;
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public SetupContext setup() {
			return getRuleContext(SetupContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((RContext)_localctx).d = defs();
			setState(35);
			((RContext)_localctx).s = setup();
			setState(36);
			((RContext)_localctx).l = loop();
			System.out.println(((RContext)_localctx).d.texte +'\n'+ ((RContext)_localctx).s.texte+'\n' + ((RContext)_localctx).l.texte); Database.print();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetupContext extends ParserRuleContext {
		public String texte;
		public SetsContext ss;
		public TerminalNode SETUP() { return getToken(HelloParser.SETUP, 0); }
		public SetsContext sets() {
			return getRuleContext(SetsContext.class,0);
		}
		public SetupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSetup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSetup(this);
		}
	}

	public final SetupContext setup() throws RecognitionException {
		SetupContext _localctx = new SetupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_setup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(SETUP);
			setState(40);
			((SetupContext)_localctx).ss = sets();
			((SetupContext)_localctx).texte =  "void setup(){ " +  ((SetupContext)_localctx).ss.texte + "}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public String texte;
		public ActionsContext as;
		public TerminalNode LOOP() { return getToken(HelloParser.LOOP, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitLoop(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(LOOP);
			setState(44);
			((LoopContext)_localctx).as = actions();
			((LoopContext)_localctx).texte =  "void loop(){ " +  ((LoopContext)_localctx).as.texte + "}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public String texte;
		public Token label;
		public TerminalNode INPUT() { return getToken(HelloParser.INPUT, 0); }
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public TerminalNode OUTPUT() { return getToken(HelloParser.OUTPUT, 0); }
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSet(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_set);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				((SetContext)_localctx).label = match(ID);
				setState(48);
				match(INPUT);
				((SetContext)_localctx).texte =  "pinMode(" +(((SetContext)_localctx).label!=null?((SetContext)_localctx).label.getText():null) + ", INPUT);";
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				((SetContext)_localctx).label = match(ID);
				setState(51);
				match(OUTPUT);
				((SetContext)_localctx).texte =  "pinMode(" +(((SetContext)_localctx).label!=null?((SetContext)_localctx).label.getText():null) + ", OUTPUT);";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetsContext extends ParserRuleContext {
		public String texte;
		public SetContext s;
		public SetsContext ss;
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public SetsContext sets() {
			return getRuleContext(SetsContext.class,0);
		}
		public SetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSets(this);
		}
	}

	public final SetsContext sets() throws RecognitionException {
		SetsContext _localctx = new SetsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sets);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				((SetsContext)_localctx).s = set();
				setState(56);
				((SetsContext)_localctx).ss = sets();
				((SetsContext)_localctx).texte =  ((SetsContext)_localctx).s.texte + " "  + ((SetsContext)_localctx).ss.texte;
				}
				break;
			case LOOP:
				enterOuterAlt(_localctx, 2);
				{
				((SetsContext)_localctx).texte =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionsContext extends ParserRuleContext {
		public String texte;
		public ActionContext a;
		public ActionsContext as;
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public ActionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitActions(this);
		}
	}

	public final ActionsContext actions() throws RecognitionException {
		ActionsContext _localctx = new ActionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_actions);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHEN:
			case IF:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				((ActionsContext)_localctx).a = action();
				setState(63);
				((ActionsContext)_localctx).as = actions();
				((ActionsContext)_localctx).texte =  ((ActionsContext)_localctx).a.texte + "\n" + ((ActionsContext)_localctx).as.texte; 
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((ActionsContext)_localctx).texte =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public String texte;
		public AffectContext a;
		public EventContext e;
		public CondContext c;
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				((ActionContext)_localctx).a = affect();
				((ActionContext)_localctx).texte =  ((ActionContext)_localctx).a.texte;
				}
				break;
			case WHEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				((ActionContext)_localctx).e = event();
				((ActionContext)_localctx).texte =  ((ActionContext)_localctx).e.texte;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				((ActionContext)_localctx).c = cond();
				((ActionContext)_localctx).texte =  ((ActionContext)_localctx).c.texte;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectContext extends ParserRuleContext {
		public String texte;
		public Token label;
		public StatusContext value;
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public StatusContext status() {
			return getRuleContext(StatusContext.class,0);
		}
		public AffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAffect(this);
		}
	}

	public final AffectContext affect() throws RecognitionException {
		AffectContext _localctx = new AffectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_affect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((AffectContext)_localctx).label = match(ID);
			setState(81);
			((AffectContext)_localctx).value = status();
			Database.add((((AffectContext)_localctx).label!=null?((AffectContext)_localctx).label.getText():null), (((AffectContext)_localctx).value!=null?_input.getText(((AffectContext)_localctx).value.start,((AffectContext)_localctx).value.stop):null)); ((AffectContext)_localctx).texte =  (((AffectContext)_localctx).label!=null?((AffectContext)_localctx).label.getText():null) + "=" + (((AffectContext)_localctx).value!=null?_input.getText(((AffectContext)_localctx).value.start,((AffectContext)_localctx).value.stop):null) + ";";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public String texte;
		public ExprContext ex;
		public ActionContext body;
		public TerminalNode WHEN() { return getToken(HelloParser.WHEN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitEvent(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_event);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(WHEN);
			setState(85);
			((EventContext)_localctx).ex = expr();
			setState(86);
			((EventContext)_localctx).body = action();
			((EventContext)_localctx).texte =  "if(" + ((EventContext)_localctx).ex.texte + "){\n" + ((EventContext)_localctx).body.texte +"\n}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public String texte;
		public ExprContext e;
		public ActionContext body;
		public SecondContext s;
		public TerminalNode IF() { return getToken(HelloParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitCond(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(IF);
			setState(90);
			((CondContext)_localctx).e = expr();
			setState(91);
			((CondContext)_localctx).body = action();
			setState(92);
			((CondContext)_localctx).s = second();
			((CondContext)_localctx).texte =  "if(" + ((CondContext)_localctx).e.texte + "){\n" + ((CondContext)_localctx).body.texte +"\n}" + ((CondContext)_localctx).s.texte;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SecondContext extends ParserRuleContext {
		public String texte;
		public ActionContext bod;
		public TerminalNode ELSE() { return getToken(HelloParser.ELSE, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public SecondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_second; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSecond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSecond(this);
		}
	}

	public final SecondContext second() throws RecognitionException {
		SecondContext _localctx = new SecondContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_second);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(ELSE);
				setState(96);
				((SecondContext)_localctx).bod = action();
				 ((SecondContext)_localctx).texte =  "else{\n" + ((SecondContext)_localctx).bod.texte+ "\n}";
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((SecondContext)_localctx).texte =  "";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String texte;
		public ExpContext left;
		public OperatorContext op;
		public ExpContext right;
		public ExprContext e;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
			case ON:
			case OFF:
			case ID:
			case INT:
			case DEC:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				((ExprContext)_localctx).left = exp();
				setState(103);
				((ExprContext)_localctx).op = operator();
				setState(104);
				((ExprContext)_localctx).right = exp();
				 ((ExprContext)_localctx).texte =  ((ExprContext)_localctx).left.texte + " " +  ((ExprContext)_localctx).op.texte + " " + ((ExprContext)_localctx).right.texte ;
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(T__0);
				setState(108);
				((ExprContext)_localctx).e = expr();
				setState(109);
				match(T__1);
				((ExprContext)_localctx).texte =  "(" + ((ExprContext)_localctx).e.texte + ")";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatusContext extends ParserRuleContext {
		public String texte;
		public TerminalNode ON() { return getToken(HelloParser.ON, 0); }
		public TerminalNode OFF() { return getToken(HelloParser.OFF, 0); }
		public StatusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_status; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStatus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStatus(this);
		}
	}

	public final StatusContext status() throws RecognitionException {
		StatusContext _localctx = new StatusContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_status);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ON:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(ON);
				((StatusContext)_localctx).texte =  "HIGH";
				}
				break;
			case OFF:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(OFF);
				((StatusContext)_localctx).texte =  "LOW";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public String texte;
		public Token ID;
		public StatusContext s;
		public Token INT;
		public Token DEC;
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public StatusContext status() {
			return getRuleContext(StatusContext.class,0);
		}
		public TerminalNode INT() { return getToken(HelloParser.INT, 0); }
		public TerminalNode DEC() { return getToken(HelloParser.DEC, 0); }
		public TerminalNode TRUE() { return getToken(HelloParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(HelloParser.FALSE, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_exp);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((ExpContext)_localctx).ID = match(ID);
				((ExpContext)_localctx).texte =  (((ExpContext)_localctx).ID!=null?((ExpContext)_localctx).ID.getText():null);
				}
				break;
			case ON:
			case OFF:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				((ExpContext)_localctx).s = status();
				((ExpContext)_localctx).texte =  ((ExpContext)_localctx).s.texte;
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				((ExpContext)_localctx).INT = match(INT);
				((ExpContext)_localctx).texte =  (((ExpContext)_localctx).INT!=null?((ExpContext)_localctx).INT.getText():null);
				}
				break;
			case DEC:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				((ExpContext)_localctx).DEC = match(DEC);
				((ExpContext)_localctx).texte =  (((ExpContext)_localctx).DEC!=null?((ExpContext)_localctx).DEC.getText():null);
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				match(TRUE);
				((ExpContext)_localctx).texte =  "true";
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				match(FALSE);
				((ExpContext)_localctx).texte =  "false";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
